setup/MicroK8SObservability/kube_promstack_kube_prome_prometheus_ingress.yaml
---
# https://www.loft.sh/blog/kubernetes-nginx-ingress
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kube-prom-stack-kube-prome-operator-ingress
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # DDoS - Limitation
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "300"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/whitelist-source-range: 127.0.0.1/8,169.254.0.0/16,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16 # Allow local access
    cert-manager.io/cluster-issuer: k8s-issuer
spec:
  ingressClassName: public
  tls:
    - hosts:
        - ${K8S_ENVIRONMENT}.prometheus.slainte.at
      secretName: ${K8S_ENVIRONMENT}-prometheus-slainte-at
  rules:
    - host: ${K8S_ENVIRONMENT}.prometheus.slainte.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prom-stack-kube-prome-prometheus
                port:
                  number: 9090
